# redesigned-disco

./: .gitignore  README.md  conda  main.py  requirements.txt
bf/: Makefile  __init__.py  bf.c
bf/interface/: bfi.c
bf/pkg/: MANIFEST.in  setup.cfg
bfi/: Makefile  __init__.py  bf.h  libbf.h
bfi/interface/: bfi.c
bfi/pkg/: MANIFEST.in
